--- a/config/config.json
+++ b/config/config.json
@@ -1,3 +1,9 @@
 {
-  "hello": "world..."
+  "hello": "world...",
+  "logger": {
+    "defaultLevel": "info",
+    "level": {
+      "App": "debug"
+    }
+  }
 }
