--- a/package.json
+++ b/package.json
@@ -25,46 +25,19 @@
   },
   "devDependencies": {
     "@metafoks/eslint-config": "1.1.0",
+    "@metafoks/jest-config": "1.0.1",
     "@metafoks/prettier": "1.1.0",
     "@types/jest": "29.4.0",
     "eslint": "8.56.0",
     "eslint-plugin-jest": "27.9.0",
-    "jest": "29.4.3",
     "prettier": "3.2.5",
-    "ts-jest": "29.0.5",
+    "jest": "29.7.0",
+    "ts-jest": "29.1.2",
     "ts-node": "10.9.2"
   },
-  "author": "",
-  "license": "ISC",
   "jest": {
-    "collectCoverage": true,
-    "coverageReporters": [
-      "html",
-      "json"
-    ],
-    "setupFiles": [
-      "<rootDir>/test/setup.ts"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.ts"
-    ],
-    "coveragePathIgnorePatterns": [
-      "node_modules",
-      "<rootDir>/src/index.ts",
-      ".mock.ts"
-    ],
-    "coverageDirectory": "<rootDir>/coverage/",
-    "testRegex": "(/test/.*\\.(test|spec))\\.(jsx?|tsx?|ts|js)$",
-    "transform": {
-      "^.+\\.(t|j)sx?$": "ts-jest"
-    },
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "json",
-      "node",
-      "jsx",
-      "tsx"
-    ]
-  }
+    "preset": "@metafoks/jest-config"
+  },
+  "author": "",
+  "license": "ISC"
 }
