--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     ]
   },
   "dependencies": {
-    "metafoks-application": "1.0.16",
-    "typescript": "5.3.3"
+    "metafoks-application": "1.0.21"
   },
   "devDependencies": {
     "@metafoks/eslint-config": "1.1.0",
@@ -33,7 +32,8 @@
     "prettier": "3.2.5",
     "jest": "29.7.0",
     "ts-jest": "29.1.2",
-    "ts-node": "10.9.2"
+    "ts-node": "10.9.2",
+    "typescript": "5.4.4"
   },
   "jest": {
     "preset": "@metafoks/jest-config"
